re-adjusted submit button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
 
@@ -111,7 +111,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
 
@@ -254,7 +254,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -324,7 +324,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -362,7 +362,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -397,7 +397,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -432,7 +432,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -468,7 +468,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -505,7 +505,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -540,7 +540,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -575,7 +575,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -611,7 +611,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -648,7 +648,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -683,7 +683,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -721,7 +721,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
@@ -756,7 +756,7 @@
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <a href="./" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                        <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                     </div>
                 </div>
             </div>
