--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
     <div class="container">
         <div class="row">
-            <div>
-                <p id="score">
-                    0
-                </p>
-            </div>
             <div class="col s12">
                 <h1>Jeopardy</h1>
             </div>
-            <div class="col s12">
+            <div class="row">
+                <div class="col s6">
+                    <p id="score">
+                        0
+                    </p>
+                </div>
+                <div class="col s6">
                 <p>
                     <i class="medium material-icons">refresh</i>
                 </p>
@@ -733,7 +734,10 @@
                         <h4>Society 500</h4>
                         <p>
                             <form id="que20" action="#">
-                                <h5>Sociology developed in the midst of the social and intellectual upheaval surrounding the Industrial Revolution of the 19th century. Three branches of sociology grew from roots in three interest groups: social activists a new breed of scientists dedicated to applying the scientific approach to society and philosophers interested in humanity's social nature.</h5>
+                                <h5>Sociology developed in the midst of the social and intellectual upheaval surrounding the
+                                    Industrial Revolution of the 19th century. Three branches of sociology grew from roots
+                                    in three interest groups: social activists a new breed of scientists dedicated to applying
+                                    the scientific approach to society and philosophers interested in humanity's social nature.</h5>
                                 <p>
                                     <label>
                                         <input class="with-gap" name="group1" type="radio" value="society500a" />
