--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" href="CSS/style.css">
@@ -21,7 +22,7 @@
                 </p>
             </div>
             <div class="col s12 m4 l8">
-                <h1>Jeopardy</h1>
+                <h1>~JEOPARDY~</h1>
             </div>
             <div class="col s12 m4 l2">
                 <p>
