added ids for hide function

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="row">
-                <div id="musicone" class="col s12 m6 l3">
-                    <button data-target="modal1" class="btn-large modal-trigger">100</button>
+                <div class="col s12 m6 l3">
+                    <button id="musicone" data-target="modal1" class="btn-large modal-trigger">100</button>
 
                     <div id="modal1" class="modal">
                         <div id="music-100" class="modal-content">
@@ -80,8 +80,8 @@
                     </div>
 
                 </div>
-                <div id="lifeone" class="col s12 m6 l3">
-                    <button data-target="modal2" class="btn-large modal-trigger">100</button>
+                <div class="col s12 m6 l3">
+                    <button id="lifeone" data-target="modal2" class="btn-large modal-trigger">100</button>
 
                     <div id="modal2" class="modal">
                         <div class="modal-content">
@@ -111,12 +111,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide2" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="mathone" class="col s12 m6 l3">
-                    <button data-target="modal3" class="btn-large modal-trigger">100</button>
+                <div class="col s12 m6 l3">
+                    <button id="mathone" data-target="modal3" class="btn-large modal-trigger">100</button>
 
                     <div id="modal3" class="modal">
                         <div class="modal-content">
@@ -146,12 +146,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide3" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="societyone" class="col s12 m6 l3">
-                    <button data-target="modal4" class="btn-large modal-trigger">100</button>
+                <div class="col s12 m6 l3">
+                    <button id="societyone" data-target="modal4" class="btn-large modal-trigger">100</button>
 
                     <div id="modal4" class="modal">
                         <div class="modal-content">
@@ -181,14 +181,14 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide4" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div id="musictwo" class="col s12 m6 l3">
-                    <button data-target="modal5" class="btn-large modal-trigger">200</button>
+                <div class="col s12 m6 l3">
+                    <button id="musictwo" data-target="modal5" class="btn-large modal-trigger">200</button>
 
                     <div id="modal5" class="modal">
                         <div class="modal-content">
@@ -218,13 +218,13 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide5" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
 
                 </div>
-                <div id="lifetwo" class="col s12 m6 l3">
-                    <button data-target="modal6" class="btn-large modal-trigger">200</button>
+                <div class="col s12 m6 l3">
+                    <button id="lifetwo" data-target="modal6" class="btn-large modal-trigger">200</button>
 
                     <div id="modal6" class="modal">
                         <div class="modal-content">
@@ -254,12 +254,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide6" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="mathtwo" class="col s12 m6 l3">
-                    <button data-target="modal7" class="btn-large modal-trigger">200</button>
+                <div class="col s12 m6 l3">
+                    <button id="mathtwo" data-target="modal7" class="btn-large modal-trigger">200</button>
 
                     <div id="modal7" class="modal">
                         <div class="modal-content">
@@ -289,12 +289,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide7" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="societytwo" class="col s12 m6 l3">
-                    <button data-target="modal8" class="btn-large modal-trigger">200</button>
+                <div class="col s12 m6 l3">
+                    <button id="societytwo" data-target="modal8" class="btn-large modal-trigger">200</button>
 
                     <div id="modal8" class="modal">
                         <div class="modal-content">
@@ -324,15 +324,15 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide8" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div id="musicthree" class="col s12 m6 l3">
-                    <button data-target="modal9" class="btn-large modal-trigger">300</button>
+                <div  class="col s12 m6 l3">
+                    <button id="musicthree" data-target="modal9" class="btn-large modal-trigger">300</button>
 
                     <div id="modal9" class="modal">
                         <div class="modal-content">
@@ -362,12 +362,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide9" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="lifethree" class="col s12 m6 l3">
-                    <button data-target="modal10" class="btn-large modal-trigger">300</button>
+                <div class="col s12 m6 l3">
+                    <button id="lifethree" data-target="modal10" class="btn-large modal-trigger">300</button>
 
                     <div id="modal10" class="modal">
                         <div class="modal-content">
@@ -397,12 +397,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide10" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="maththree" class="col s12 m6 l3">
-                    <button data-target="modal11" class="btn-large modal-trigger">300</button>
+                <div class="col s12 m6 l3">
+                    <button id="maththree" data-target="modal11" class="btn-large modal-trigger">300</button>
 
                     <div id="modal11" class="modal">
                         <div class="modal-content">
@@ -432,12 +432,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide11" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="societythree" class="col s12 m6 l3">
-                    <button data-target="modal12" class="btn-large modal-trigger">300</button>
+                <div class="col s12 m6 l3">
+                    <button id="societythree" data-target="modal12" class="btn-large modal-trigger">300</button>
 
                     <div id="modal12" class="modal">
                         <div class="modal-content">
@@ -468,14 +468,14 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide12" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div id="musicfour" class="col s12 m6 l3">
-                    <button data-target="modal13" class="btn-large modal-trigger">400</button>
+                <div class="col s12 m6 l3">
+                    <button id="musicfour" data-target="modal13" class="btn-large modal-trigger">400</button>
 
                     <div id="modal13" class="modal">
                         <div class="modal-content">
@@ -505,12 +505,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide13" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="lifefour" class="col s12 m6 l3">
-                    <button data-target="modal14" class="btn-large modal-trigger">400</button>
+                <div class="col s12 m6 l3">
+                    <button id="lifefour" data-target="modal14" class="btn-large modal-trigger">400</button>
 
                     <div id="modal14" class="modal">
                         <div class="modal-content">
@@ -540,12 +540,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide14" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="mathfour" class="col s12 m6 l3">
-                    <button data-target="modal15" class="btn-large modal-trigger">400</button>
+                <div class="col s12 m6 l3">
+                    <button id="mathfour" data-target="modal15" class="btn-large modal-trigger">400</button>
 
                     <div id="modal15" class="modal">
                         <div class="modal-content">
@@ -575,12 +575,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide15" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="societyfour" class="col s12 m6 l3">
-                    <button data-target="modal16" class="btn-large modal-trigger">400</button>
+                <div class="col s12 m6 l3">
+                    <button id="societyfour" data-target="modal16" class="btn-large modal-trigger">400</button>
 
                     <div id="modal16" class="modal">
                         <div class="modal-content">
@@ -611,14 +611,14 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide16" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div id="musicfive" class="col s12 m6 l3">
-                    <button data-target="modal17" class="btn-large modal-trigger">500</button>
+                <div class="col s12 m6 l3">
+                    <button id="musicfive" data-target="modal17" class="btn-large modal-trigger">500</button>
 
                     <div id="modal17" class="modal">
                         <div class="modal-content">
@@ -648,12 +648,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide17" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="lifefive" class="col s12 m6 l3">
-                    <button data-target="modal18" class="btn-large modal-trigger">500</button>
+                <div class="col s12 m6 l3">
+                    <button id="lifefive" data-target="modal18" class="btn-large modal-trigger">500</button>
 
                     <div id="modal18" class="modal">
                         <div class="modal-content">
@@ -683,12 +683,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide18" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="mathfive" class="col s12 m6 l3">
-                    <button data-target="modal19" class="btn-large modal-trigger">500</button>
+                <div class="col s12 m6 l3">
+                    <button id="mathfive" data-target="modal19" class="btn-large modal-trigger">500</button>
 
                     <div id="modal19" class="modal">
                         <div class="modal-content">
@@ -721,12 +721,12 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide19" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
-                <div id="societyfive" class="col s12 m6 l3">
-                    <button data-target="modal20" class="btn-large modal-trigger">500</button>
+                <div class="col s12 m6 l3">
+                    <button id="societyfive" data-target="modal20" class="btn-large modal-trigger">500</button>
 
                     <div id="modal20" class="modal">
                         <div class="modal-content">
@@ -760,7 +760,7 @@
                             </p>
                         </div>
                         <div class="modal-footer">
-                            <a href="#" class="modal-close waves-effect waves-green btn-flat">Submit</a>
+                            <a href="#" id="hide20" class="modal-close waves-effect waves-green btn-flat">Submit</a>
                         </div>
                     </div>
                 </div>
