--- a/index.html
+++ b/index.html
@@ -765,6 +765,8 @@
                     </div>
                 </div>
             </div>
+            <div id="ending"></div>
+            <div id="points"></div>
 
             <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
                 crossorigin="anonymous"></script>
