--- a/index.html
+++ b/index.html
@@ -329,9 +329,8 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
-                <div  class="col s12 m6 l3">
+                <div class="col s12 m6 l3">
                     <button id="musicthree" data-target="modal9" class="btn-large modal-trigger">300</button>
 
                     <div id="modal9" class="modal">
@@ -765,13 +764,15 @@
                     </div>
                 </div>
             </div>
-            <div id="ending"></div>
-            <div id="points"></div>
-
-            <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-            <script src="JS/main.js"></script>
+        </div>
+        <div id="ending"></div>
+        <div id="points"></div>
+        <div id="play"></div>
+    </div>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
